[gd_scene load_steps=27 format=3 uid="uid://b7qrekhy1qigo"]

[ext_resource type="Script" uid="uid://cnf50jx74a503" path="res://element.gd" id="1_pmcjm"]
[ext_resource type="Script" uid="uid://dl1xudgh4iohh" path="res://element_area.gd" id="2_tx7r8"]
[ext_resource type="Texture2D" uid="uid://dxtyst2kfpu5v" path="res://images/1_1.png" id="4_degyn"]
[ext_resource type="Texture2D" uid="uid://dek2nv4pdm3b1" path="res://images/1_2.png" id="5_moq7m"]
[ext_resource type="Texture2D" uid="uid://cm1fussmme2d6" path="res://images/1_3.png" id="6_ppud3"]
[ext_resource type="Texture2D" uid="uid://bd0dggno1en1w" path="res://images/1_4.png" id="7_ii317"]
[ext_resource type="Texture2D" uid="uid://qsw22r82fbm0" path="res://images/1_5.png" id="8_vbwaw"]
[ext_resource type="Texture2D" uid="uid://jyd0r7gsrvmq" path="res://images/2_1.png" id="9_hy651"]
[ext_resource type="Texture2D" uid="uid://quyf7q3oltcw" path="res://images/2_2.png" id="10_l2qhh"]
[ext_resource type="Texture2D" uid="uid://dig4jlo8d28n0" path="res://images/2_3.png" id="11_q7avh"]
[ext_resource type="Texture2D" uid="uid://bgdnxbtqij8v" path="res://images/3_1.png" id="12_v48eh"]
[ext_resource type="Texture2D" uid="uid://d2mrdnj0ygu4s" path="res://images/3_2.png" id="13_3us6d"]
[ext_resource type="Texture2D" uid="uid://bomc1d5gk7xdi" path="res://images/3_3.png" id="14_kjrlj"]
[ext_resource type="Texture2D" uid="uid://cugnxaqjbs014" path="res://images/3_4.png" id="15_dny3i"]
[ext_resource type="Texture2D" uid="uid://bxoo2bdy5k3is" path="res://images/3_5.png" id="16_kusr3"]
[ext_resource type="Texture2D" uid="uid://c48xn1xxdjxhw" path="res://images/3_6.png" id="17_txbga"]
[ext_resource type="Texture2D" uid="uid://fvlsd641xdnh" path="res://images/1.png" id="17_v48eh"]
[ext_resource type="Texture2D" uid="uid://c23u5hbytic03" path="res://images/2.png" id="18_3us6d"]
[ext_resource type="Texture2D" uid="uid://btcctq52skugh" path="res://images/3.png" id="19_kjrlj"]
[ext_resource type="Texture2D" uid="uid://ctrmgp3mgyqmr" path="res://images/4.png" id="20_dny3i"]
[ext_resource type="Texture2D" uid="uid://ceppjdaroyqol" path="res://images/5.png" id="21_kusr3"]
[ext_resource type="Texture2D" uid="uid://ds6bfhxm26pha" path="res://images/6.png" id="22_txbga"]
[ext_resource type="Texture2D" uid="uid://bw758m85fxinq" path="res://images/7.png" id="23_dboln"]
[ext_resource type="Texture2D" uid="uid://doh2cjgix6wsn" path="res://images/8.png" id="24_kfq6d"]
[ext_resource type="Texture2D" uid="uid://b8f8oh40rsn0p" path="res://images/9.png" id="25_lbj51"]

[sub_resource type="SpriteFrames" id="SpriteFrames_tx7r8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_degyn")
}, {
"duration": 1.0,
"texture": ExtResource("5_moq7m")
}, {
"duration": 1.0,
"texture": ExtResource("6_ppud3")
}, {
"duration": 1.0,
"texture": ExtResource("7_ii317")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("8_vbwaw")
}, {
"duration": 1.0,
"texture": ExtResource("6_ppud3")
}, {
"duration": 1.0,
"texture": ExtResource("7_ii317")
}, {
"duration": 1.0,
"texture": ExtResource("5_moq7m")
}, {
"duration": 1.0,
"texture": ExtResource("4_degyn")
}],
"loop": false,
"name": &"1",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_hy651")
}, {
"duration": 1.0,
"texture": ExtResource("10_l2qhh")
}, {
"duration": 1.0,
"texture": ExtResource("11_q7avh")
}, {
"duration": 1.0,
"texture": ExtResource("9_hy651")
}, {
"duration": 1.0,
"texture": ExtResource("10_l2qhh")
}, {
"duration": 1.0,
"texture": ExtResource("9_hy651")
}, {
"duration": 1.0,
"texture": ExtResource("11_q7avh")
}, {
"duration": 1.0,
"texture": ExtResource("10_l2qhh")
}, {
"duration": 1.0,
"texture": ExtResource("9_hy651")
}, {
"duration": 1.0,
"texture": ExtResource("11_q7avh")
}, {
"duration": 1.0,
"texture": ExtResource("9_hy651")
}],
"loop": false,
"name": &"2",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_v48eh")
}, {
"duration": 1.0,
"texture": ExtResource("13_3us6d")
}, {
"duration": 1.0,
"texture": ExtResource("14_kjrlj")
}, {
"duration": 1.0,
"texture": ExtResource("15_dny3i")
}, {
"duration": 1.0,
"texture": ExtResource("16_kusr3")
}, {
"duration": 1.0,
"texture": ExtResource("17_txbga")
}, {
"duration": 1.0,
"texture": ExtResource("16_kusr3")
}, {
"duration": 1.0,
"texture": ExtResource("15_dny3i")
}, {
"duration": 1.0,
"texture": ExtResource("14_kjrlj")
}, {
"duration": 1.0,
"texture": ExtResource("15_dny3i")
}, {
"duration": 1.0,
"texture": ExtResource("16_kusr3")
}, {
"duration": 1.0,
"texture": ExtResource("17_txbga")
}, {
"duration": 1.0,
"texture": ExtResource("16_kusr3")
}, {
"duration": 1.0,
"texture": ExtResource("15_dny3i")
}, {
"duration": 1.0,
"texture": ExtResource("14_kjrlj")
}, {
"duration": 1.0,
"texture": ExtResource("13_3us6d")
}, {
"duration": 1.0,
"texture": ExtResource("12_v48eh")
}],
"loop": true,
"name": &"3",
"speed": 12.0
}, {
"frames": [],
"loop": false,
"name": &"Head_Smahing_Moogie",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_v48eh")
}, {
"duration": 1.0,
"texture": ExtResource("18_3us6d")
}, {
"duration": 1.0,
"texture": ExtResource("19_kjrlj")
}, {
"duration": 1.0,
"texture": ExtResource("20_dny3i")
}, {
"duration": 1.0,
"texture": ExtResource("21_kusr3")
}, {
"duration": 1.0,
"texture": ExtResource("22_txbga")
}, {
"duration": 1.0,
"texture": ExtResource("23_dboln")
}, {
"duration": 1.0,
"texture": ExtResource("24_kfq6d")
}, {
"duration": 1.0,
"texture": ExtResource("25_lbj51")
}, {
"duration": 1.0,
"texture": ExtResource("20_dny3i")
}],
"loop": true,
"name": &"Working_Moogie",
"speed": 15.0
}]

[node name="Element" type="Node2D"]
script = ExtResource("1_pmcjm")

[node name="element_area" type="Area2D" parent="."]
script = ExtResource("2_tx7r8")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="element_area"]
polygon = PackedVector2Array(-90, -95, 90, -95, 90, 95, -90, 95)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_tx7r8")
animation = &"Working_Moogie"
frame = 8
frame_progress = 0.729172
offset = Vector2(120, -60)

[node name="mouse_blocker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = -185.0
offset_right = 150.0
offset_bottom = -105.0

[node name="working_mode_button" type="Button" parent="."]
offset_left = 10.0
offset_top = -140.0
offset_right = 150.0
offset_bottom = -105.0
text = "Working Mode"

[node name="idle_mode_button" type="Button" parent="."]
offset_left = 10.0
offset_top = -185.0
offset_right = 150.0
offset_bottom = -150.0
text = "Idle Mode"

[connection signal="mouse_entered" from="element_area" to="." method="mouse_entered_area"]
[connection signal="mouse_exited" from="element_area" to="." method="mouse_exited_area"]
[connection signal="pressed" from="working_mode_button" to="." method="working_mode_button_pressed"]
[connection signal="pressed" from="idle_mode_button" to="." method="idle_mode_button_pressed"]
